--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -25,6 +25,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
+<!-- import google map compontent -->
+<link rel="import" href="../bower_components/google-map/google-map.html">
+
+<!-- import animatotions -->
+<link rel="import" href="../bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+
+
+
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
